--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,7 @@
 		</footer>
 <script type="text/javascript" src="js/libs/jquery.min.js"></script>
 <script type="text/javascript" src="js/libs/angular.min.js"></script>
+<script type="text/javascript" src="js/libs/count-to.js"></script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
 <script type="text/javascript" src="css/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
